feat: GLOBAL REFACTORING, idk, i go sleep, bb

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn
 sqlalchemy
 python-multipart
-pydantic[email]
+pydantic[email, settings]
 python-jose[cryptography]
 bcrypt
 python-multipart
