refactor: update user retrieval functions and clean up imports in auth and posts routers

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,8 @@ fastapi
 uvicorn
 sqlalchemy
 python-multipart
-pydantic[email, settings]
+pydantic[email]
+pydantic-settings
 python-jose[cryptography]
 bcrypt
 python-multipart
