--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 fastapi
 uvicorn
-sqlalchemy
+sqlalchemy>=2.0
 python-multipart
 pydantic[email]
 pydantic-settings
 python-jose[cryptography]
 bcrypt
-pytest==7.4.3
+pytest>=8.2,<9
+pytest-asyncio
 httpx==0.25.1
