--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /app
 COPY . .
 
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt && \
+    mkdir -p /app/uploads
 
 EXPOSE 8000
 
